[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prbtrd"
version = "0.1.0"
description = "Probability-based long/short trader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
prbtrd = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prbtrd*"]
