[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prbtrd"
version = "0.1.0"
description = "Probability-based trader using a machine-learning learner"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.4.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]

[project.scripts]
prbtrd = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
